Learn about SARIMA and SARIMAX model

--- a/Start.ipynb
+++ b/Start.ipynb
@@ -238,6 +238,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b507bd05",
+   "metadata": {},
+   "source": [
+    "### PACF "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b5ee64a",
+   "metadata": {},
+   "source": [
+    "### Differencing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54ad871e",
+   "metadata": {},
+   "source": [
+    "### ACF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a50c7b56",
    "metadata": {},
    "source": [
@@ -290,7 +314,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "273.188px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
